--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,6 +13,8 @@ sites:
     url: https://ji.taioan.org/
   - name: Ginger's portfolio 
     url: https://bginger.art/
+  - name: 奇蹟 30
+    url: https://miracle30.live/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
